--- a/NoteApp/Web.config
+++ b/NoteApp/Web.config
@@ -11,7 +11,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="NoteApp" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Данил\Documents\Visual Studio 2017\projects\NoteApp\NoteApp\App_Data\NoteApp.mdf;Integrated Security=True" />
+    <add name="MSSQL" connectionString="Data Source=localhost\SQLSERVER2017;Initial Catalog=NoteApp;Integrated Security=SSPI;" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
