--- a/NoteApp.Models/NoteApp.Models.csproj
+++ b/NoteApp.Models/NoteApp.Models.csproj
@@ -67,9 +67,12 @@
     <Compile Include="Listeners\ListenerAttribute.cs" />
     <Compile Include="Listeners\PreInsertNoteEventListener.cs" />
     <Compile Include="Listeners\PreUpdateNoteEventListener.cs" />
+    <Compile Include="Models\BinaryFile.cs" />
+    <Compile Include="Models\BinaryFileMap.cs" />
     <Compile Include="Models\Resume.cs" />
     <Compile Include="Models\ResumeMap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\BinaryFileRepository.cs" />
     <Compile Include="Repositories\ResumeRepository.cs" />
     <Compile Include="Repositories\Repository.cs" />
     <Compile Include="Repositories\RepositoryAttribute.cs" />
