--- a/NoteApp/bin/NoteApp.dll.config
+++ b/NoteApp/bin/NoteApp.dll.config
@@ -11,7 +11,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="NoteApp" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Данил\Documents\Visual Studio 2017\projects\NoteApp\NoteApp\App_Data\NoteApp.mdf;Integrated Security=True" />
+    <add name="MSSQL" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\DanilKomyshev\Documents\GitHub\NoteApp\NoteApp\App_Data\ResumeApp.mdf;Integrated Security=True"
+ providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
