--- a/NoteApp/Web.config
+++ b/NoteApp/Web.config
@@ -11,7 +11,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="MSSQL" connectionString="Data Source=localhost\SQLSERVER2017;Initial Catalog=NoteApp;Integrated Security=SSPI;" />
+    <add name="MSSQL" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\DanilKomyshev\Documents\GitHub\NoteApp\NoteApp\App_Data\ResumeApp.mdf;Integrated Security=True"
+ providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
