--- a/NoteApp/bin/NoteApp.dll.config
+++ b/NoteApp/bin/NoteApp.dll.config
@@ -9,6 +9,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="uri" value="~\\Files\\" />
   </appSettings>
   <connectionStrings>
     <add name="MSSQL" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\DanilKomyshev\Documents\GitHub\NoteApp\NoteApp\App_Data\ResumeApp.mdf;Integrated Security=True"
